--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.1",
     "mongoose-autopopulate": "^0.16.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21"
   }
 }
